--- a/Invessence/modules/web/src/main/webapp/pages/custody/uob/acctOpening.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/uob/acctOpening.xhtml
@@ -162,7 +162,7 @@
                                           <label for="dtbirth">Date Of Birth</label>
 
                                        </div>
-                                       <div class="Container25 Responsive100 select_item">
+                                       <div class="Container30 Responsive100 select_item">
                                           <span class="title_line">Country Of Birth</span>
                                           <!-- <input id="countbirth" name="countbirth" type="text" placeholder="Country of birth"/>
                                           <label for="countbirth">Country of birth</label> -->
@@ -180,7 +180,7 @@
                                     </div>
                                     <div class="acc_holder_dtl_block ">
                                        <div class="Container100 Responsive100 label_opacity per_res">
-                                          <div class="Container10 Responsive100">
+                                          <div class="Container10 Responsive100 nationality_title">
                                              <span>Nationality</span>
                                           </div>
                                           <div class="Container70 Responsive100">
@@ -338,7 +338,7 @@
                                           <label for="dtbirth">Date Of Birth</label>
 
                                        </div>
-                                       <div class="Container25 Responsive100 select_item">
+                                       <div class="Container30 Responsive100 select_item">
                                           <span class="title_line">Country Of Birth</span>
                                           <!-- <input id="countbirth" name="countbirth" type="text" placeholder="Country of birth"/>
                                           <label for="countbirth">Country of birth</label> -->
@@ -356,7 +356,7 @@
                                     </div>
                                     <div class="acc_holder_dtl_block ">
                                        <div class="Container100 Responsive100 label_opacity per_res">
-                                          <div class="Container10 Responsive100">
+                                          <div class="Container10 Responsive100 nationality_title">
                                              <span>Nationality</span>
                                           </div>
                                           <div class="Container70 Responsive100">
