--- a/Invessence/modules/web/src/main/webapp/pages/custody/uob/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/uob/index.xhtml
@@ -37,7 +37,7 @@
                                         </p:selectOneRadio>
                                     </div>
                                 </div>
-                                <p:panel id="extCstmParm" style="border-color: transparent;" >
+                                <p:panel id="extCstmParm" style="border-color: transparent;" class="Container100" >
                                     <div class="Container100 margin-top">
                                         <ui:fragment rendered="#{uobCustodyBean.dsplExtIndAcctCat}">
                                             <div class="Container70 ">
