--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/build-wealth.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/build-wealth.xhtml
@@ -11,8 +11,8 @@
 	</f:metadata>
     <ui:define name="content">
 
-    <div class="layout-portlets-box open_client_layout " >
-		<div class="Container100 Responsive50">	
+    <div class="layout-portlets-box open_client_layout portfolio_layout" >
+		<div class="Container100 Responsive100">
 			<div class="portfolio_selection">
 				<div class="Container30"><p:graphicImage name="images/portfolio/goal.png" library="#{uiLayout.webProfile.cssdir}" width="80px"/><span>Goal</span></div>
 				<div class="Container30"><p:graphicImage name="images/portfolio/riskMeter.png" library="#{uiLayout.webProfile.cssdir}" width="80px"/></div>
