--- a/Invessence/modules/web/src/main/webapp/pages/custody/uob/newAcctOpen.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/uob/newAcctOpen.xhtml
@@ -1167,7 +1167,7 @@
                                                 </p:selectOneMenu>
                                             </div>
                                             <p:panel id="nwPriHldFinSrcPnl" style="border-color: transparent;" class="Container100">
-                                                <div class="Container50 Responsive100 select_item">
+                                                <div class="Container50 Responsive100 select_item margin-top">
                                                     <div class="Container100"><span class="title_line">Source of Funds / Wealth</span></div>
                                                     <p:selectOneMenu id="nwPriHldrWlthInc"
                                                                      value="#{uobCustodyBean.uobDataMaster.individualOwnersDetails.ownersFinancialDetails.sourceOfFundsWealth}">
@@ -1182,7 +1182,8 @@
                                                     </p:selectOneMenu>
                                                 </div>
                                                 <ui:fragment rendered="#{uobCustodyBean.dsplSrcIncOtrs}">
-                                                    <div class="Container100 Responsive100 select_item margin-top">
+                                                    <div class="Container100 Responsive50 select_item margin-top">
+                                                        <div class="Container100"><span class="title_line">Source of Funds / Wealth</span></div>
                                                         <p:inputText id="nwPriHldrWlthIncInp" placeholder="Please specify Source of Funds/Wealth"
                                                                      value="#{uobCustodyBean.uobDataMaster.individualOwnersDetails.ownersFinancialDetails.sourceOfFundsWealthSpecify}"/>
                                                         <label for="nwPriHldrWlthIncInp">Please specify Source of Funds/Weath</label>
@@ -1560,9 +1561,9 @@
                                                         <f:selectItem itemLabel="Others" itemValue="Others"/>
                                                     </p:selectOneMenu>
                                                 </div>
-                                                <p:panel id="nwPriHldObjPnl2" style="border-color: transparent;">
+                                                <p:panel id="nwPriHldObjPnl2" style="border-color: transparent;" class="Container40 ">
                                                     <ui:fragment rendered="#{uobCustodyBean.dsplPriHldrObjPnl2}">
-                                                        <div class="Container50">
+                                                        <div class="Container100">
                                                             <p:inputText id="nwPriHldrObjInvObjInp" placeholder="Please Specify"
                                                                          value="#{uobCustodyBean.uobDataMaster.individualOwnersDetails.ownersFinancialDetails.investmentObjectiveSpecify}"/>
                                                             <label for="nwPriHldrObjPreExpInp">Please Specify</label>
